--- a/css/header.css
+++ b/css/header.css
@@ -262,6 +262,7 @@ button{
 /* products */
 .products{
   padding: 6rem 5px 5px 0;
+
 }
 .products h2{
   text-align: center;
@@ -410,6 +411,7 @@ button{
     justify-content: space-between;
     align-items: flex-start;
     flex-wrap: wrap;
+    margin-top: 40px;
 
   }
 
@@ -482,9 +484,9 @@ button.white{
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(350px, auto));
 	grid-gap: 50px;
-	margin: 50px auto;
+	margin: 5px auto;
 	max-width: 1240px;
-	padding: 20px;
+	padding: 10px;
 }
 
 .product{
@@ -879,7 +881,7 @@ body {
 /* Cart Icon */
 
 .products{
-  padding: 5rem 5px 5px 0;
+  padding: 2rem 5px 5px 0;
 
 }
 .products h2{
@@ -1155,6 +1157,92 @@ body {
 .modal .product-content{
   margin: 1px;
 }
+
+
+/* New Arrival Filter */
+
+
+.top-rated .filter-list {
+  gap: 15px;
+  margin-top: 50px;
+  list-style-type: none;
+}
+
+.top-rated .filter-btn {
+  position: relative;
+  background: var(--rich-black-fogra-39);
+  color: var(--light-gray);
+  font-size: var(--fs-10);
+  font-weight: var(--fw-700);
+  text-transform: uppercase;
+  padding: 17px 25px;
+  border-radius: 4px;
+  box-shadow: inset 0 3px 7px hsla(0, 0%, 0%, 0.8);
+}
+
+.top-rated .filter-btn:focus {
+  color: orangered;
+  text-shadow: 0 3px 25px hsla(57, 97%, 45%, 0.5);
+}
+
+.top-rated .filter-btn:focus::before,
+.top-rated .filter-btn:focus::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: var(--fire-bush);
+  width: 2px;
+  height: 15px;
+}
+
+.top-rated .filter-btn:focus::before { left: 0; }
+
+.top-rated .filter-btn:focus::after { right: 0; }
+
+
+.container1 {
+  max-width: 540px;
+  margin-inline: auto;
+}
+
+.filter-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.upcoming .filter-btn {
+  color: var(--white);
+  background: var(--raisin-black);
+  font-size: var(--fs-11);
+  font-weight: var(--fw-500);
+  border: 2px solid var(--gunmetal-1);
+  padding: 12px 26px;
+  border-radius: 50px;
+}
+
+.upcoming .filter-btn:focus { border-color: var(--fire-bush); }
+
+.upcoming .movies-list > li {
+  min-width: 100%;
+  scroll-snap-align: start;
+}
+
+#newArrival{
+  margin-top: 100px;
+
+  padding-left: 30px;
+}
+
+
+.container1{
+  padding-right: 30px;
+}
+
+
 
 
 /* Footer */
@@ -1773,3 +1861,7 @@ transition: 0.2s;
   color: black;
   font-size: 20px;
 }
+
+
+
+
