--- a/css/header.css
+++ b/css/header.css
@@ -90,10 +90,11 @@ button.normal{
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-left: 0;
+  padding-right: 80px;
 
 
 }
-
 
 #navbar li{
   list-style: none;
